[FE-dev] - update scss home

--- a/app/design/frontend/greenfarm/default/template/page/html/footer.phtml
+++ b/app/design/frontend/greenfarm/default/template/page/html/footer.phtml
@@ -33,7 +33,7 @@ $lang = (Mage::app()->getStore()->getStoreID() == 1) ? 'en' : 'vn';
     <div class="container row">
         <div class="col-4">
             <h4 class="title">GreenFarm 6 Banh</h4>
-            <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('footer_infomation_left_' . $lang)->toHtml(); ?>
+            <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('footer_information_left_' . $lang)->toHtml(); ?>
         </div>
         <div class="col-4">
             <h4 class="title">About US</h4>
@@ -41,7 +41,7 @@ $lang = (Mage::app()->getStore()->getStoreID() == 1) ? 'en' : 'vn';
         </div>
         <div class="col-4">
             <h4 class="title">Policies</h4>
-            <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('footer_links_policy_us_' . $lang)->toHtml(); ?>
+            <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('footer_links_policy_' . $lang)->toHtml(); ?>
         </div>
         <div class="col-4 connect">
             <h4 class="title">Connect Us</h4>
