--- a/skin/frontend/greenfarm/default/css/styles.css
+++ b/skin/frontend/greenfarm/default/css/styles.css
@@ -3144,13 +3144,14 @@ body {
 /* ============================================ *
  * Header
  * ============================================ */
-/* ============================================ *
- * Language switcher + welcome message
- * ============================================ */
+/* ===================================================== *
+ * Language switcher + welcome message + header-grid
+ * ===================================================== */
 .header-language-background {
   padding: 10px;
   background-color: #3399CC;
   text-transform: uppercase;
+  color: #E6E6E6;
 }
 .header-language-background .header-language-container {
   max-width: 1200px;
@@ -3162,6 +3163,9 @@ body {
   display: table;
   clear: both;
 }
+.header-language-background a {
+  color: #E6E6E6;
+}
 .header-language-background .form-language,
 .header-language-background .currency-switcher {
   float: left;
@@ -3171,6 +3175,11 @@ body {
   float: right;
 }
 
+@media only screen and (max-width: 770px) {
+  .header-language-background {
+    display: none;
+  }
+}
 .page-header-container .store-language-container {
   float: right;
   max-width: 35%;
@@ -3191,16 +3200,41 @@ body {
     font-size: 12px;
   }
 }
-.header-language-background,
-.header-language-background a {
-  color: #E6E6E6;
+.header-grid {
+  background-color: #3399CC;
+}
+.header-grid .container {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.header-grid .container:before, .header-grid .container:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.header-grid .nav-right {
+  float: right;
+}
+.header-grid .list,
+.header-grid .list li,
+.header-grid .store-language {
+  display: inline-block;
+  vertical-align: top;
+}
+.header-grid .list {
+  color: #ffffff;
+}
+.header-grid .list li {
+  margin-right: 10px;
+}
+.header-grid .list a {
+  color: #ffffff;
+  margin-left: 5px;
+}
+.header-grid .list label {
+  margin-right: 10px;
 }
 
-@media only screen and (max-width: 770px) {
-  .header-language-background {
-    display: none;
-  }
-}
 /* ============================================ *
  * Logo
  * ============================================ */
@@ -3933,8 +3967,11 @@ a.skip-link {
 .footer {
   clear: both;
   width: 100%;
-  border-top: 1px solid #CCCCCC;
   padding-top: 30px;
+  background-color: #131313;
+  border-top: 1px solid #CCCCCC;
+  font-size: 14px;
+  color: #999;
   /* -------------------------------------------- *
    * Social icons
    */
@@ -3954,8 +3991,9 @@ a.skip-link {
   font-size: 14px;
 }
 .footer .row .title {
+  margin-bottom: 20px;
   font-size: 15px;
-  color: #3399CC;
+  color: #f90;
 }
 .footer .connect .tm-social-tit {
   margin-bottom: 5px;
@@ -4000,6 +4038,7 @@ a.skip-link {
 .footer .links {
   padding: 0 30px 0 0;
   margin-bottom: 30px;
+  font-size: 14px;
 }
 .footer .links li {
   word-break: break-all;
@@ -4007,19 +4046,18 @@ a.skip-link {
   padding: 4px 0;
 }
 .footer .links a {
-  color: #636363;
+  color: #999;
+  text-decoration: none;
 }
 .footer .links a:hover {
-  color: #3399CC;
+  color: #f90;
 }
 .footer .block-subscribe {
   float: right;
   width: 320px;
   margin-bottom: 30px;
 }
-.footer .links,
 .footer .block-subscribe {
-  text-transform: uppercase;
   font-size: 12px;
 }
 .footer .form-subscribe-header {
