--- a/skin/frontend/greenfarm/default/scss/_var.scss
+++ b/skin/frontend/greenfarm/default/scss/_var.scss
@@ -94,9 +94,13 @@ $c-red: #CF5050;
 $c-yellow: #FFDD15;
 $c-black: #000000;
 $c-gray: #333333;
+$c-white: #ffffff;
 
 $color01: #3c3c3c;
 $color02: #f31818;
+$color03: #131313;
+$color04: #f90;
+$color05: #999;
 
 // =============================================
 // Base Colors
