--- a/skin/frontend/greenfarm/default/scss/_var.scss
+++ b/skin/frontend/greenfarm/default/scss/_var.scss
@@ -101,6 +101,7 @@ $color02: #f31818;
 $color03: #131313;
 $color04: #f90;
 $color05: #999;
+$color06: #8a8a8a;
 
 // =============================================
 // Base Colors
