--- a/skin/frontend/greenfarm/default/scss/layout/_header-nav.scss
+++ b/skin/frontend/greenfarm/default/scss/layout/_header-nav.scss
@@ -169,9 +169,13 @@ $nav-primary-height: 30px;
             display: block;
             max-width: 100%;
             position: relative;
+            &:focus
             &:hover {
                 .dropdown-menu {
                     display: block;
+                }
+                > a {
+                    color: $color04;
                 }
             }
             > a {
