--- a/skin/frontend/greenfarm/default/scss/module/_catalog-product.scss
+++ b/skin/frontend/greenfarm/default/scss/module/_catalog-product.scss
@@ -921,3 +921,87 @@
         display: none;
     }
 }
+
+
+/* ============================================ *
+ * products-items
+ * ============================================ */
+.products-items {
+    .products-grid {
+        .items {
+            font-size: 0;
+        }
+        .item {
+            width: 33.333333%;
+            display: inline-block;
+            vertical-align: top;
+            position: relative;
+            font-size: $f-size;
+            overflow: hidden;
+        }
+    }
+    .field-content {
+
+    }
+    .product-image {
+        position: relative;
+        a {
+            display: block;
+        }
+        img {
+            max-width: 100%;
+            max-height: 100%;
+        }
+        .group-actions {
+            top: 50%;
+            left: 50%;
+            z-index: 10;
+            position: absolute;
+            -ms-transform: translate(-50%,-50%);
+            -webkit-transform: translate(-50%,-50%);
+            transform: translate(-50%, -50%);
+        }
+    }
+    .group-actions {}
+    .btn {
+        border: none;
+        display: inline-block;
+        vertical-align: top;
+        background-position: center center;
+        background-repeat: no-repeat;
+        &-cart {}
+        &-buy-cart {}
+    }
+    .product-info {
+        padding: 10px 0;
+    }
+    .product-name {
+        font-size: $f-size;
+        a {
+            text-decoration: none;
+            &:focus,
+            &:hover {
+
+            }
+        }
+    }
+    .price {
+        margin-bottom: 5px;
+        &-new {
+            display: inline-block;
+            vertical-align: middle;
+            color: $color02;
+            font-size: $f-size-xxl;
+            font-weight: 700;
+        }
+        &-old {
+            margin-left: 5px;
+            display: inline-block;
+            vertical-align: middle;
+            color: $color06;
+            font-size: $f-size-l;
+            text-decoration: line-through;
+        }
+    }
+}
+
